fixed form btns, bckgnd colr & menu on small scrns

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -68,24 +68,36 @@
   @media (max-height: 375px) {
     &__list {
       display: grid;
-      justify-items: center;
-      align-items: center;
+      padding-right: 68px;
+      align-items: flex-start;
+      justify-content: space-evenly;
+      
       grid-template-columns: repeat(2, minmax(max-content, 1fr));
       margin-bottom: 0;
     }
 
     &__link {
+      
       font-size: 18px;
       font-weight: bold;
       line-height: 18px;
     }
 
+    &__item {
+      margin: 10px;
+      justify-self: end;
+
+      &:nth-child(2) {
+        padding-right: 34px;
+      }
+    }
+
     &__item--contacts {
       display: grid;
       grid-template-columns: repeat(1, 1fr);
-      justify-items: end;
+      justify-items: center;
       justify-content: center;
-      padding-right: 20px;
+      margin-top: 10px;
     }
   }
 
