--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,7 +8,7 @@
 
   &__body {
     margin: 0;
-    background: $c-gray;
+    background: #FFFFFF;
   }
 
   &__menu {
